--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
-<!DOCTYPE html><html><head><link href="https://fonts.googleapis.com/css?family=Geist&display=swap" rel="stylesheet" /><link href="./css/main.css" rel="stylesheet" /><title>Document</title></head><body><div class="v1_2"><div class="v1_5"></div><div class="v1_20"><div class="v1_53"><div class="v1_51"></div><span class="v1_7">SnowMyScreen</span></div><div class="v1_133"><div class="v1_134"><div class="v1_135"><div class="v1_136"><div class="v1_137"></div><div class="v1_138"></div></div><div class="v1_139"><div class="v1_140"><div class="v1_141"><div class="v1_142"><div class="v1_143"></div><div class="v1_144"></div></div></div><div class="v1_145"><div class="v1_146"></div><div class="v1_147"></div><div class="v1_148"></div><div class="v1_149"></div><div class="v1_150"></div><div class="v1_151"></div><div class="v1_152"></div><div class="v1_153"></div><div class="v1_154"></div><div class="v1_155"></div><div class="v1_156"></div></div></div></div></div><div class="v1_157"><div class="v1_158"><div class="v1_159"></div><div class="v1_160"></div><div class="v1_161"></div><div class="v1_162"></div><div class="v1_163"></div><div class="v1_164"></div><div class="v1_165"></div><div class="v1_166"></div><div class="v1_167"></div><div class="v1_168"></div><div class="v1_169"></div><div class="v1_170"></div><div class="v1_171"></div></div></div></div></div></div><div class="v1_11"><div class="v5_184"><div class="v5_188"><span class="v5_189">⚡️</span><span class="v1_174">an***da.gmail.com just bought the app</span></div><div class="v1_3"></div><div class="v1_9"><span class="v1_4">Bring your Mac to life with gentle, customizable snowfall</span></div><div class="v1_50"><div class="v1_93"><div class="v1_94"><div class="v1_95"><div class="v1_96"><div class="v1_97"></div><div class="v1_98"></div></div><div class="v1_99"><div class="v1_100"><div class="v1_101"><div class="v1_102"><div class="v1_103"></div><div class="v1_104"></div></div></div><div class="v1_105"><div class="v1_106"></div><div class="v1_107"></div><div class="v1_108"></div><div class="v1_109"></div><div class="v1_110"></div><div class="v1_111"></div><div class="v1_112"></div><div class="v1_113"></div><div class="v1_114"></div><div class="v1_115"></div><div class="v1_116"></div></div></div></div></div><div class="v1_117"><div class="v1_118"><div class="v1_119"></div><div class="v1_120"></div><div class="v1_121"></div><div class="v1_122"></div><div class="v1_123"></div><div class="v1_124"></div><div class="v1_125"></div><div class="v1_126"></div><div class="v1_127"></div><div class="v1_128"></div><div class="v1_129"></div><div class="v1_130"></div><div class="v1_131"></div></div></div></div></div><span class="v1_48">Available for macOS 14.6+</span></div></div><div class="v5_187"><span class="v5_182">Contact us</span><span class="v5_185">Privacy policy</span></div></div></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>SnowMyScreen</title>
+
+  <!-- Google Font (Geist) -->
+  <link href="https://fonts.googleapis.com/css?family=Geist:400,500,600&display=swap" rel="stylesheet">
+
+  <!-- Your CSS -->
+  <link rel="stylesheet" href="main.css">
+</head>
+
+<body>
+
+  <!-- Navigation -->
+  <header class="nav">
+    <div class="nav-left">
+      <img src="images/logo.png" class="logo" alt="logo" />
+      <span class="brand">SnowMyScreen</span>
+    </div>
+
+    <a class="buy-btn" href="#">Buy now</a>
+  </header>
+
+  <!-- Hero Section -->
+  <section class="hero">
+
+    <img src="images/icon.png" class="hero-icon" alt="app icon">
+
+    <h1 class="hero-title">
+      Bring your Mac to life with gentle, customizable snowfall
+    </h1>
+
+    <p class="subtext">Available for macOS 14.6+</p>
+
+    <a class="cta" href="#">
+      Download for macOS
+    </a>
+
+  </section>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <a href="#">Contact us</a>
+    <a href="#">Privacy policy</a>
+  </footer>
+
+</body>
+</html>
