--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Navigation -->
   <header class="nav">
     <div class="nav-left">
-      <img src="images/logo.png" class="logo" alt="logo" />
+      <img src="images/v1_3.png" class="logo" alt="logo" />
       <span class="brand">SnowMyScreen</span>
     </div>
 
