--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <!-- Hero Section -->
   <section class="hero">
 
-    <img src="images/icon.png" class="hero-icon" alt="app icon">
+    <img src="images/v1_51.png" class="hero-icon" alt="app icon">
 
     <h1 class="hero-title">
       Bring your Mac to life with gentle, customizable snowfall
