--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
     <img src="images/v1_51.png" class="hero-icon" alt="app icon">
 
     <h1 class="hero-title">
-      Bring your Mac to life<br>
-      with gentle, customizable snowfall
+      Bring your Mac to life with gentle, customizable snowfall
     </h1>
 
     <p class="subtext">Available for macOS 14.6+</p>
