Replace images with new icon in index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Navigation -->
   <header class="nav">
     <div class="nav-left">
-      <img src="images/v1_3.png" class="logo" alt="logo" />
+      <img src="images/icon.png" class="logo" alt="logo" />
       <span class="brand">SnowMyScreen</span>
     </div>
 
@@ -34,7 +34,7 @@
       </span>
     </div>
 
-    <img src="images/v1_51.png" class="hero-icon" alt="app icon">
+    <img src="images/icon.png" class="hero-icon" alt="app icon">
 
     <h1 class="hero-title">
       Bring your Mac to life with gentle, customizable snowfall
