--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="SnowMyScreen" />
   <meta property="og:description" content="Bring your Mac to life with gentle, customizable snowfall. Available for macOS 14.6+" />
-  <meta property="og:image" content="https://yourdomain.com/images/preview.png" />
-  <meta property="og:url" content="https://yourdomain.com" />
+  <meta property="og:image" content="https://snowmyscreen.app/images/preview.png" />
+  <meta property="og:url" content="https://snowmyscreen.app" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="SnowMyScreen" />
   <meta name="twitter:description" content="Bring your Mac to life with gentle, customizable snowfall. Available for macOS 14.6+" />
-  <meta name="twitter:image" content="https://yourdomain.com/images/preview.png" />
+  <meta name="twitter:image" content="https://snowmyscreen.app/images/preview.png" />
 
   <!-- Google Font (Geist) -->
   <link href="https://fonts.googleapis.com/css?family=Geist:400,500,600&display=swap" rel="stylesheet">
