--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <a href="#">Contact us</a>
+    <a href="mail:hello@andrewsereda.com">Contact us</a>
     <a href="privacy.html">Privacy policy</a>
   </footer>
 
