--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
   <!-- Hero Section -->
   <section class="hero">
 
-    <!-- <div class="notification" id="notification">
+    <div class="notification" id="notification">
       <span class="notification-icon">⚡</span>
       <span class="notification-text">
         <span class="notification-email" id="notification-email">an***da@gmail.com</span> just bought the app
       </span>
-    </div> -->
+    </div>
 
     <img src="images/icon.png" class="hero-icon" alt="app icon">
 
